[metadata]
name = public-ip
version = 0.1
author = Víctor Terrón
author_email = quintanar@gmail.com
description = A Python function to get your public IP address.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vterron/public-ip
project_urls =
    Bug Tracker = https://github.com/vterron/public-ip/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0
install_requires =
    requests

[options.packages.find]
where = src
